<resources>
    <string name="app_name" translatable="false">Sadness Learn</string>
    <string name="authors" translatable="false">by SadnessMood</string>
    <string name="authorization">Авторизация</string>
    <string name="auth_options">Войдите или зарегистрируйтесь</string>
    <string name="sign_in">Вход</string>
    <string name="register">Регистрация</string>
    <string name="reg_text_info">Зарегестрируйтесь, чтобы пользоваться приложением и следить за прогрессом</string>
    <string name="email_hint" translatable="false">e-mail: example@mail.com</string>
    <string name="name_hint">Имя пользователя:</string>
    <string name="password_hint">Пароль:</string>
    <string name="password_conf_hint">Подтверждение пароля:</string>
    <string name="sign_in_text_info">Для продолжения войдите в аккаунт</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="reset_password_info">Для сброса пароля введите адрес электронной почты, указанный при регистрации. На него вам будет отправлено письмо с инструкцией</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="password_length">Длина пароля минимум 6 символов</string>
    <string name="btn_back_description">Назад</string>
    <string name="sandbox">Песочница</string>
    <string name="description_run" translatable="false">Run code</string>
    <string name="settings">Настройки</string>
    <string name="tasks">Задачи</string>
    <string name="plot">Сюжет</string>
    <string name="task_types">Типы задач</string>
    <string name="code_task">Код</string>
    <string name="block_task">Блоки</string>
    <string name="solving">Решение</string>
    <string name="task">Задача</string>
    <string name="item" translatable="false">Item</string>
    <string name="profile">Профиль</string>
    <string name="change_name">Изменить имя</string>
    <string name="change_photo">Изменить фото</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="change_mail">Сменить почту</string>
    <string name="change_password">Сменить пароль</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="theme">Тема</string>
    <string name="lang">Язык</string>
    <string name="confirm_email">Подтвердите адрес электронной почты!</string>
    <string name="wrong_email_type">Введите правильный email!</string>
    <string name="account_deleted">Аккаунт удалён!</string>
    <string name="sign_in_again">Перезайдите в учётную запись!</string>
    <string name="error_try_sign_in">Ошибка, попробуйте перезайти в свой аккаунт!</string>
    <string name="enter_field">Заполните поле!</string>
    <string name="enter_fields">Заполните все поля!</string>
    <string name="passwords_match">Пароли совпадают</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="programming_language">Язык программирования</string>
    <string name="choose_programming_language">Выберите язык программирования</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="sign_in_success">Вход выполнен!</string>
    <string name="wrong_email_password">Неверный email или пароль!</string>
    <string name="repeating_email">Повторный email</string>
    <string name="ask_to_send_repeating_email">Хотите отправить повторный email для подтверждения электронной почты?</string>
    <string name="letter_sent">Письмо отправлено!</string>
    <string name="did_not_sign_in">Вы не вошли в систему!</string>
    <string name="user_already_exists">Такой пользователь уже существует!</string>
    <string name="user_not_exist">Пользователя с таким email не существует!</string>
    <string name="greeting_message">Добро пожаловать,</string>
    <string name="exit">Выход</string>
    <string name="sure_to_change_photo">Вы действительно хотите изменить фото профиля?</string>
    <string name="sure_to_delete_photo">Вы действительно хотите удалить фото профиля?</string>
    <string name="sure_to_exit">Вы действительно хотите выйти из аккаунта?</string>
    <string name="sure_to_delete">Вы действительно хотите удалить свою учётную запись?</string>
    <string name="choose_interf_lang">Выберите язык интерфейса</string>
    <string name="photo_uploading">Фото загружается, пожалуйста, подождите</string>
    <string name="error_uploading_photo">Ошибка при загрузке фото</string>
    <string name="photo_deleting">Фото удаляется, пожалуйста, подождите</string>
    <string name="error_deleting_photo">Ошибка при удалении фото</string>
    <string-array name="interface_langs">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string-array name="languages">
        <item>Java</item>
        <item>C#</item>
        <item>C++</item>
        <item>GoLang</item>
        <item>Php</item>
        <item>Pascal</item>
    </string-array>
    <string-array name="java_keywords">
        <item>abstract</item>
        <item>assert</item>
        <item>boolean</item>
        <item>break</item>
        <item>byte</item>
        <item>case</item>
        <item>catch</item>
        <item>char</item>
        <item>class</item>
        <item>const</item>
        <item>continue</item>
        <item>default</item>
        <item>do</item>
        <item>double</item>
        <item>else</item>
        <item>enum</item>
        <item>extends</item>
        <item>final</item>
        <item>finally</item>
        <item>float</item>
        <item>for</item>
        <item>goto</item>
        <item>if</item>
        <item>implements</item>
        <item>import</item>
        <item>instanceof</item>
        <item>int</item>
        <item>interface</item>
        <item>long</item>
        <item>native</item>
        <item>new</item>
        <item>package</item>
        <item>private</item>
        <item>protected</item>
        <item>public</item>
        <item>return</item>
        <item>short</item>
        <item>static</item>
        <item>strictfp</item>
        <item>super</item>
        <item>switch</item>
        <item>synchronized</item>
        <item>this</item>
        <item>throw</item>
        <item>throws</item>
        <item>transient</item>
        <item>try</item>
        <item>void</item>
        <item>volatile</item>
        <item>while</item>
    </string-array>
    <string-array name="CSharpKeywords">
        <item>abstract</item>
        <item>as</item>
        <item>base</item>
        <item>bool</item>
        <item>break</item>
        <item>byte</item>
        <item>case</item>
        <item>catch</item>
        <item>char</item>
        <item>checked</item>
        <item>class</item>
        <item>const</item>
        <item>continue</item>
        <item>decimal</item>
        <item>default</item>
        <item>delegate</item>
        <item>do</item>
        <item>double</item>
        <item>else</item>
        <item>enum</item>
        <item>event</item>
        <item>explicit</item>
        <item>extern</item>
        <item>false</item>
        <item>finally</item>
        <item>fixed</item>
        <item>float</item>
        <item>for</item>
        <item>foreach</item>
        <item>goto</item>
        <item>if</item>
        <item>implicit</item>
        <item>in</item>
        <item>int</item>
        <item>interface</item>
        <item>internal</item>
        <item>is</item>
        <item>lock</item>
        <item>long</item>
        <item>namespace</item>
        <item>new</item>
        <item>null</item>
        <item>object</item>
        <item>operator</item>
        <item>out</item>
        <item>override</item>
        <item>params</item>
        <item>private</item>
        <item>protected</item>
        <item>public</item>
        <item>readonly</item>
        <item>ref</item>
        <item>return</item>
        <item>sbyte</item>
        <item>sealed</item>
        <item>short</item>
        <item>sizeof</item>
        <item>stackalloc</item>
        <item>static</item>
        <item>string</item>
        <item>struct</item>
        <item>switch</item>
        <item>this</item>
        <item>throw</item>
        <item>true</item>
        <item>try</item>
        <item>typeof</item>
        <item>uint</item>
        <item>ulong</item>
        <item>unchecked</item>
        <item>unsafe</item>
        <item>ushort</item>
        <item>using</item>
        <item>var</item>
        <item>virtual</item>
        <item>void</item>
        <item>volatile</item>
        <item>while</item>
    </string-array>
    <string-array name="CPPKeywords">
        <item>alignas</item>
        <item>alignof</item>
        <item>and</item>
        <item>and_eq</item>
        <item>asm</item>
        <item>atomic_cancel</item>
        <item>atomic_commit</item>
        <item>atomic_noexcept</item>
        <item>auto</item>
        <item>bitand</item>
        <item>bitor</item>
        <item>bool</item>
        <item>break</item>
        <item>case</item>
        <item>catch</item>
        <item>char</item>
        <item>char8_t</item>
        <item>char16_t</item>
        <item>char32_t</item>
        <item>class</item>
        <item>compl</item>
        <item>concept</item>
        <item>const</item>
        <item>consteval</item>
        <item>constexpr</item>
        <item>constinit</item>
        <item>const_cast</item>
        <item>continue</item>
        <item>co_await</item>
        <item>co_return</item>
        <item>co_yield</item>
        <item>decltype</item>
        <item>default</item>
        <item>delete</item>
        <item>do</item>
        <item>double</item>
        <item>dynamic_cast</item>
        <item>else</item>
        <item>enum</item>
        <item>explicit</item>
        <item>export</item>
        <item>extern</item>
        <item>false</item>
        <item>float</item>
        <item>for</item>
        <item>friend</item>
        <item>goto</item>
        <item>if</item>
        <item>inline</item>
        <item>int</item>
        <item>long</item>
        <item>mutable</item>
        <item>namespace</item>
        <item>new</item>
        <item>noexcept</item>
        <item>not</item>
        <item>not_eq</item>
        <item>nullptr</item>
        <item>operator</item>
        <item>or</item>
        <item>or_eq</item>
        <item>private</item>
        <item>protected</item>
        <item>public</item>
        <item>reflexpr</item>
        <item>register</item>
        <item>reinterpret_cast</item>
        <item>requires</item>
        <item>return</item>
        <item>short</item>
        <item>signed</item>
        <item>sizeof</item>
        <item>static</item>
        <item>static_assert</item>
        <item>static_cast</item>
        <item>struct</item>
        <item>switch</item>
        <item>synchronized</item>
        <item>template</item>
        <item>this</item>
        <item>thread_local</item>
        <item>throw</item>
        <item>true</item>
        <item>try</item>
        <item>typedef</item>
        <item>typeid</item>
        <item>typename</item>
        <item>union</item>
        <item>unsigned</item>
        <item>using</item>
        <item>virtual</item>
        <item>void</item>
        <item>volatile</item>
        <item>wchar_t</item>
        <item>while</item>
        <item>xor</item>
        <item>xor_eq</item>
    </string-array>
</resources>