<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:id="@+id/lin_lay_reg_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/comicsansms"
            android:maxWidth="200dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/comicsansms"
            android:maxWidth="250dp"
            android:text="@string/reg_text_info"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/lin_lay_reg_info"
        android:layout_marginTop="300dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edTex_reg_email"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/comicsansms"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/edTex_reg_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:fontFamily="@font/comicsansms"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/edTex_reg_password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:fontFamily="@font/comicsansms"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/edTex_reg_confPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_conf_hint"
            android:fontFamily="@font/comicsansms"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_reg_match_passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/comicsansms"
            android:maxWidth="250dp"
            android:text="@string/password_length"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_reg_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/ButtonStyle" />
    </LinearLayout>
</RelativeLayout>