<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="50dp"
        app:title="@string/btn_back_description"
        />

    <RelativeLayout
        style="@style/RelativeLayoutContent">

        <LinearLayout
            android:id="@+id/lin_lay_sign_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/comicsansms"
                android:maxWidth="200dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/comicsansms"
                android:maxWidth="250dp"
                android:text="@string/sign_in_text_info"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_lay_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@id/lin_lay_sign_info"
            android:layout_marginTop="300dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edTex_sign_email"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:fontFamily="@font/comicsansms"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edTex_sign_password"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:fontFamily="@font/comicsansms"
                android:autofillHints="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_s_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                style="@style/ButtonStyle" />

            <TextView
                android:id="@+id/tv_sign_in_reset_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/comicsansms"
                android:maxWidth="250dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>