<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_registration"
        style="@style/ToolbarSadness">

        <TextView
            style="@style/ToolbarText"
            android:text="@string/app_name" />
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        style="@style/RelativeLayoutContent"
        tools:context=".activities.Authentification">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comicsansms"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/maxmillionikiikocom"
                android:text="@string/authors"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/comicsansms"
                android:text="@string/authorization"
                android:textAlignment="center"
                android:textSize="30sp" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/gif_start_activity"
                android:layout_marginTop="100dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_auth_options"
            android:layout_alignParentBottom="true"
            android:textSize="15sp"
            android:fontFamily="@font/comicsansms"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_options"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:weightSum="2"
            android:layout_above="@id/tv_auth_options"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_auth_sign_in"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/sign_in"
                app:cornerRadius="500dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_auth_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/register"
                style="@style/ButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>