<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_choose_task_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="50dp"
        app:title="@string/task_types"
        />

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TaskTypeChoose">

        <LinearLayout
            android:id="@+id/lin_lay_main_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_choose_task_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_task"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/btn_choose_task_block"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_task"
                style="@style/ButtonStyle" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>